--- a/index.html
+++ b/index.html
@@ -4949,10 +4949,10 @@
         Last updated 2012-06-26.
       </p>
       <p>
-        By <a href="http://henrik.nyh.se">Henrik Nyh</a>.
+        By <a href="https://coderanger.net/">Noah Kantrowitz</a> (with styling and layout by <a href="http://henrik.nyh.se">Henrik Nyh</a>).
       </p>
       <p>
-        <a href="https://github.com/henrik/hipchat-emoticons">View source on GitHub</a>.
+        <a href="https://github.com/coderanger/testemote">View source on GitHub</a>.
       </p>
     </footer>
   </body>
